[workspace]
members = ["pain_core", "pain_app", "pain_bevy_visualizer"]
resolver = "2"

[workspace.dependencies]
nalgebra = "0.33"
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

#[patch.crates-io]
#cmake = { git = "https://github.com/rust-lang/cmake-rs", branch = "master" }