[package]
name = "pain_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use system SDL2 with static linking to avoid CMake build issues
sdl2 = { version = "0.36", default-features = false, features = ["static-link"] }
nalgebra = { workspace = true }
pain_core = { path = "../pain_core" }
rand = { workspace = true }
gl = "0.14"
